--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
       <div class="gallery-container">
         <ul class="gallery"></ul>
         <span class="loader is-hidden"></span>
+        <div class="js-guard"></div>
       </div>
     </main>
 
