Add scroll to top button

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
         <span class="loader is-hidden"></span>
         <div class="js-guard"></div>
       </div>
+      <button class="scroll-to-top is-hidden" aria-label="Scroll to top">🡹</button>
     </main>
 
     <script type="module" src="./main.js"></script>
